smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/elision/list-member-elision-in-v1.smithy
// Parse error at line 6, column 5 near `$m`: Members can only elide targets in IDL version 2 or later
$version: "1.0"
namespace smithy.example

list Foos {
    $member
}
